Style dark components

--- a/docs/_sass/bootstrap.sass
+++ b/docs/_sass/bootstrap.sass
@@ -70,11 +70,11 @@ $bootstrap-invert: #fff
         &:hover
           text-decoration: underline
     .bd-is-empty
-      background-color: var(--#{$prefix}-background)
-      color: var(--#{$prefix}-text-light)
+      background-color: var(--#{$prefix}background)
+      color: var(--#{$prefix}text-light)
     .bd-is-unique
       background-color: rgba($green, 0.25)
-      color: var(--#{$prefix}-text-strong)
+      color: var(--#{$prefix}text-strong)
       font-weight: $weight-bold
 
 .bd-bootstrap-comparison-header
