--- a/docs/_sass/klmn.sass
+++ b/docs/_sass/klmn.sass
@@ -12,7 +12,7 @@
   margin: 0.25rem auto 0.25rem 0
 
 .bd-klmn-gap
-  background-color: var(--#{$prefix}-background)
+  background-color: var(--#{$prefix}background)
   border-radius: $radius
   color: $red
   font-family: $family-monospace
@@ -24,7 +24,7 @@
   white-space: nowrap
   &.bd-is-selected
     background-color: $green
-    color: var(--#{$prefix}-scheme-main)
+    color: var(--#{$prefix}scheme-main)
 
 .bd-klmn-columns:last-child
   .bd-notification
