--- a/docs/_sass/love.sass
+++ b/docs/_sass/love.sass
@@ -1,5 +1,5 @@
 .bd-testimonials
-  background-color: var(--#{$prefix}-background)
+  background-color: var(--#{$prefix}background)
 
 .bd-testimonial
   align-items: flex-start
@@ -7,7 +7,7 @@
   justify-content: center
 
 .bd-testimonial-tweet
-  background-color: var(--#{$prefix}-scheme-main)
+  background-color: var(--#{$prefix}scheme-main)
 
 .bd-more-loves
   align-items: center
@@ -57,7 +57,7 @@
 .hero.bd-is-love
   .title,
   .subtitle
-    color: var(--#{$prefix}-scheme-main)
+    color: var(--#{$prefix}scheme-main)
 
 @keyframes rainbow
     0%
@@ -111,7 +111,7 @@
       margin-left: 1.5rem
 
 .bd-shoutout
-  background-color: var(--#{$prefix}-background)
+  background-color: var(--#{$prefix}background)
   padding: 2rem
   text-align: center
   &:not(:last-child)
