--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -39,7 +39,7 @@ $sidebar-width: 10.5rem
 //
 // 3. Assign CSS vars to elements/components
 // html
-//   background-color: var(--#{$prefix}-scheme-main)
+//   background-color: var(--#{$prefix}scheme-main)
 //
 
 %center
@@ -48,7 +48,7 @@ $sidebar-width: 10.5rem
   justify-content: center
 
 %bd-box
-  background-color: var(--#{$prefix}-scheme-main)
+  background-color: var(--#{$prefix}scheme-main)
   border-radius: $radius-large
   box-shadow: 0 1.5rem 1.5rem -1.25rem rgba($black, 0.05)
   display: block
