--- a/docs/_sass/callout.sass
+++ b/docs/_sass/callout.sass
@@ -1,6 +1,6 @@
 .bd-callout
   +block
-  background-color: var(--#{$prefix}-background)
+  background-color: var(--#{$prefix}background)
   border-radius: $radius
   padding: 1.25rem 2.5rem 1.25rem 1.5rem
   position: relative
